# LSPlant

./: README.md  build.gradle.kts  settings.gradle.kts
gradle/: libs.versions.toml
sysm/: build.gradle.kts
sysm/src/androidTest/java/com/sysm/: UnitTest.java
sysm/src/main/: AndroidManifest.xml
sysm/src/main/java/com/sysm/: Hooker.java  LSPTest.java  MainActivity.java  Replacement.java
sysm/src/main/jni/: CMakeLists.txt  test.cpp
sysm/src/main/res/values/: strings.xml  themes.xml
sysm/src/main/res/values-night/: themes.xml
sysm/src/test/java/com/sysm/: ExampleUnitTest.java
test/src/main/jni/: CMakeLists.txt  test.cpp
